2005-06-22  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/plaf/basic/BasicInternalFrameUI.java:
	(InternalFramePropertyChangeListener.vetoableChange):
	Repaint the JDesktopPane when JInternalFrame is closed.
	Also veto the close request, because hiding is not
	closing.

2005-06-22  Anthony Balkissoon  <abalkiss@redhat.com>
	
	* javax/swing/SwingUtilities.java:
	(layoutCompoundLabel): Added check for multi-line text.

2005-06-22  Anthony Balkissoon  <abalkiss@redhat.com>
	
	* javax/swing/JDialog.java:
	(setDefaultCloseOperation): Removed validity check for 
	operation code.  Validity is handled in processWindowEvent.
	* javax/swing/JFrame.java:
	(setDefaultCloseOperation): Changed error message to be more
	descriptive and similar to reference implementation.
	* javax/swing/JInternalFrame.java:
	(setDefaultCloseOperation): Removed validity check for 
	operation code.
	* javax/swing/plaf/basic/BasicInternalFrameUI.java:
	(InternalFramePropertyListener): Added implementation of
	VetoableChangeListener.
	(InternalFramePropertyListener.vetoableChange): New method.
	(InternalFramePropertyListener.propertyChange): Removed
	check for JInternalFrame.IS_CLOSED_PROPERTY.  This is now
	handled in vetoableChange.
	(getDesktopManager): Added a check for null pointer from 
	JInternalFrame.getDesktopPane().

2005-06-22  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicLabelUI.java
	(installDefaults): JLabels are not opaque by default.

2005-06-22  Roman Kennke  <roman@kennke.org>

	* javax/swing/GrayFilter.java
	(constructor): Compute factor at initialization time.
	(createDisabledImage): Initialize GrayFilter with correct arguments.
	(filterRGB): Reworked filter method. This is now compliant with
	the JDK behaviour.

2005-06-22  Mark Wielaard  <mark@klomp.org>

	Fixes bug #13439
	* javax/swing/JScrollPane.java (JScrollPane(Component,int,int)):
	Set viewport, view and scrollLostener manually.

2005-06-22  Audrius Meskauskas  <AudriusA@Bioinformatics.org>