@@ -1,3 +1,9 @@
+2005-06-22  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
+
+	* org/omg/IOP/ProfileIdHelper.java,
+	omg/IOP/MultipleComponentProfileHelper.java,
+	omg/IOP/MultipleComponentProfileHolder.java: New files.
+
 2005-06-22  Anthony Balkissoon  <abalkiss@redhat.com>
 
 	* javax/swing/plaf/basic/BasicInternalFrameUI.java:
